--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "first-py-task"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = [
     {name = "Qwerty123-25",email = "ntru7108@gmail.com"}
@@ -9,11 +9,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "requests (>=2.32.4,<3.0.0)"
+
 ]
 
-[tool.poetry]
-packages = [{include = "first_py_task", from = "src"}]
-
+[tool.poetry.dependencies]
+python = "^3.12"
+requests = "^2.32.4"  
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
